eks/kompose/drone-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Shehomebow\AndyTrainingGift\example1\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: drone-server
  name: drone-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: drone-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Shehomebow\AndyTrainingGift\example1\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/server: "true"
        io.kompose.service: drone-server
    spec:
      containers:
        - env:
            - name: DRONE_GITEA_CLIENT_ID
              value: 83865b2b-bc97-4cb7-950f-512dc8016357
            - name: DRONE_GITEA_CLIENT_SECRET
              value: xqBGH6PAQgN3o5pFKokeY6dwuqnDE2eg5YpJTXrS2aG2
            - name: DRONE_GITEA_SERVER
              value: https://git-scm.castlestech.cloud/
            - name: DRONE_GIT_ALWAYS_AUTH
              value: "true"
            - name: DRONE_RPC_SECRET
              value: "123456"
            - name: DRONE_SERVER_HOST
              value: 8459-61-31-138-103.ngrok-free.app
            - name: DRONE_SERVER_PROTO
              value: http
          image: drone/drone:2
          name: drone-server
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: drone-server-claim0
      restartPolicy: Always
      volumes:
        - name: drone-server-claim0
          persistentVolumeClaim:
            claimName: drone-server-claim0
status: {}
