eks/kompose/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Shehomebow\AndyTrainingGift\example1\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: proxy
  name: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Shehomebow\AndyTrainingGift\example1\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/server: "true"
        io.kompose.service: proxy
    spec:
      containers:
        - env:
            - name: API_SECRET
              valueFrom:
                configMapKeyRef:
                  key: API_SECRET
                  name: env
            - name: DB_DRIVER
              valueFrom:
                configMapKeyRef:
                  key: DB_DRIVER
                  name: env
            - name: DB_HOST
              valueFrom:
                configMapKeyRef:
                  key: DB_HOST
                  name: env
            - name: DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: DB_NAME
                  name: env
            - name: DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DB_PASSWORD
                  name: env
            - name: DB_PORT
              valueFrom:
                configMapKeyRef:
                  key: DB_PORT
                  name: env
            - name: DB_USER
              valueFrom:
                configMapKeyRef:
                  key: DB_USER
                  name: env
            - name: DRONE_SECRET_TOKEN
              valueFrom:
                configMapKeyRef:
                  key: DRONE_SECRET_TOKEN
                  name: env
            - name: REDIS_HOST
              valueFrom:
                configMapKeyRef:
                  key: REDIS_HOST
                  name: env
            - name: REVERSE_NGINX
              valueFrom:
                configMapKeyRef:
                  key: REVERSE_NGINX
                  name: env
            - name: TOKEN_HOUR_LIFESPAN
              valueFrom:
                configMapKeyRef:
                  key: TOKEN_HOUR_LIFESPAN
                  name: env
            - name: access_key
              valueFrom:
                configMapKeyRef:
                  key: access_key
                  name: env
            - name: secret_key
              valueFrom:
                configMapKeyRef:
                  key: secret_key
                  name: env
          image: nginx
          name: nginx
          ports:
            - containerPort: 80
            - containerPort: 443
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: proxy-claim0
            - mountPath: /etc/nginx/nginx.conf
              name: proxy-claim1
            - mountPath: /var/log/nginx
              name: proxy-claim2
            - mountPath: /etc/nginx/cert
              name: proxy-claim3
      restartPolicy: Always
      volumes:
        - name: proxy-claim0
          persistentVolumeClaim:
            claimName: proxy-claim0
        - name: proxy-claim1
          persistentVolumeClaim:
            claimName: proxy-claim1
        - name: proxy-claim2
          persistentVolumeClaim:
            claimName: proxy-claim2
        - name: proxy-claim3
          persistentVolumeClaim:
            claimName: proxy-claim3
status: {}
