eks/kompose/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\Shehomebow\AndyTrainingGift\example1\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "9525"
      port: 9525
      targetPort: 5432
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
