eks/kompose/server-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: server
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/server: "true"
  podSelector:
    matchLabels:
      io.kompose.network/server: "true"
